# ABAW-8-EMI-challenge

./: .gitignore  README.md  pyproject.toml
demo_app/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
demo_app/app/: config.py  main.py
demo_app/app/inference/: audio.py  face.py  fusion.py  models.py  pipeline.py  text.py
demo_app/app/routers/: predict.py
demo_app/frontend/: index.html
ipynb_new/: audio_encoding.ipynb  frame_encoding.ipynb  text_encoder_2.ipynb  text_encoding.ipynb
ipynb_new/additional_experements/: abaw8_emi_face_model_reproduction.ipynb  audio_model_additional_encoders.ipynb  emi_comparative_visual_analysis.ipynb  face_encoding_additional_encoders.ipynb  face_encoding_va_mtl_recompute.ipynb  multimodal_fusion_complex_methods_v1.ipynb  multimodal_fusion_emi_face_v1.ipynb  text_model_additional_encoders.ipynb  video_model_additional_encoders.ipynb
ipynb_new/demo/: demo_video_inference.ipynb
ipynb_new/multi_mod_models/: multimodal_1.ipynb  multimodal_late_fusion_finetuned_v1.ipynb
ipynb_new/single_mod_models/: aud_model.ipynb  audio_model_v2_unfrozen_enc.ipynb  image_model.ipynb  text_model.ipynb  text_model_v3_encoder_finetune.ipynb  video_model_v2_unfrozen_enc.ipynb
ipynb_old/: Untitled.ipynb  abaw8_expr.ipynb  aud_net.ipynb  aud_net_exp2.ipynb  emi.ipynb  img_net.ipynb  main_net.ipynb  requirements.txt  text_net.ipynb
