[project]
name = "networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "emotiefflib[torch]>=1.1.1",
    "facenet-pytorch>=2.5.3",
    "faster-whisper>=1.2.1",
    "fastparquet>=2025.12.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "protobuf>=6.33.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
